[metadata]
name = atrope
summary = Atrope will download images from a vmcaster VM list and upload them to glance
description-file =
    README.rst
author = Alvaro Lopez Garcia
author-email = aloga@ifca.unican.es
home-page = http://alvarolopez.github.io/atrope/
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages =
    atrope

[entry_points]
console_scripts =
    atrope-test = atrope.cmd.test:main
    atrope = atrope.cmd.cli:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = atrope/locale
domain = atrope

[update_catalog]
domain = atrope
output_dir = atrope/locale
input_file = atrope/locale/atrope.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = atrope/locale/atrope.pot
