[metadata]
name = atrope
summary = Atrope will download images from a image lists and dispatch them.
description-file = README.md
description-content-type = text/markdown; charset=UTF-8

author = Alvaro Lopez Garcia
author-email = aloga@ifca.unican.es

home-page = https://github.com/alvarolopez/atrope/

project_urls =
    Bug Tracker = https://github.com/alvarolopez/atrope

license = Apache-2
license_file = LICENSE

python-requires = >=3.6

classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages =
    atrope
data_files =
    etc/atrope = etc/*

[entry_points]
oslo.config.opts =
    atrope = atrope.opts:list_opts

console_scripts =
    atrope = atrope.cmd.cli:main
